  be used to force resuming.
* The BEETSCONFIG environment variable can now be used to specify the
  location of the config file that is at ~/.beetsconfig by default.
* A new "import_quiet_fallback" option specifies what should happen in
  quiet mode when there is no strong recommendation. The options are
  "skip" (the default) and "asis".
* Fix a bug where some files would be erroneously interpreted as MP4.
* Fix permission bits applied to album art files.
* Fix malformed MusicBrainz queries caused by null characters.
* Retry in more cases when MusicBrainz servers are slow/overloaded.
* The old "albumify" plugin for upgrading databases was removed.

1.0b6
-----
* A new "-q" command line switch for the import command suppresses all
  prompts for input; it pessimistically skips all albums that the
  importer is not completely confident about.
* Added support for the WavPack and Musepack formats. Unfortunately,
  due to a limitation in the Mutagen library (used by beets for
  metadata manipulation), Musepack SV8 is not yet supported. Here's
  the upstream bug in question:
  http://code.google.com/p/mutagen/issues/detail?id=7
* BPD now uses a pure-Python socket library and no longer requires
  eventlet/greenlet (the latter of which is a C extension). For the
  curious, the socket library in question is called Bluelet:
  https://github.com/sampsyo/bluelet
* Non-autotagged imports are now resumable (just like autotagged
  imports.)
* Fix a terrible and long-standing bug where track orderings were never
  applied. This manifested when the tagger appeared to be applying a
  reasonable ordering to the tracks but, later, the database reflects a
  completely wrong association of track names to files. The order
  applied was always just alphabetical by filename, which is frequently
  but not always what you want.
* We now use Windows' "long filename" support. Filenames on Windows now
  also never end in spaces.
* Fix crash in lastid when the artist name is not available.