@@ -37,6 +37,7 @@
 * A new "import_quiet_fallback" option specifies what should happen in
   quiet mode when there is no strong recommendation. The options are
   "skip" (the default) and "asis".
+* The "version" command now lists all the loaded plugins.
 * Fix a bug where some files would be erroneously interpreted as MP4.
 * Fix permission bits applied to album art files.
 * Fix malformed MusicBrainz queries caused by null characters.
